<resources>
    <string name="app_name">TaskManagerHaneen</string>
    <string name="EnterEmail">Enter Email address</string>
    <string name="EnterPassw">Enter password</string>
    <string name="signup">Sign Up</string>
    <string name="Signin">Sign In</string>
    <string name="reEnterPassW">Re-Enter Password</string>
    <string name="EnterName">Enter name</string>
    <string name="EnterPhone">Enter Phone</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signout">Sign Out</string>
    <string name="iscompleted">Is Completed</string>
    <string name="title_activity_group">GroupActivity</string>
    <string name="EnterGroupName">Enter Group Name</string>
    <string name="save">Save</string>
    <string name="enterText">Enter Text</string>
    <string name="enterAddress">Enter Address</string>
    <string name="title_activity_my_maps">Map</string>
</resources>
