<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hw.tann.haneen.haneentaskmanager2017.LoginActivity">

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="182dp"
        android:layout_marginStart="39dp"
        android:text="@string/signup" />

    <Button
        android:id="@+id/btnSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btnSignup"
        android:layout_marginEnd="51dp"
        android:text="@string/Signin" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayout2"
        android:layout_marginTop="53dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textInputLayout"
        android:layout_alignEnd="@+id/textInputLayout">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayout2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="44dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/EnterEmail"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayout"
        android:layout_marginBottom="56dp"
        android:layout_above="@+id/btnSignin"
        android:layout_alignStart="@+id/btnSignup"
        android:layout_toStartOf="@+id/btnSignin">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/etEmail"
            android:layout_below="@+id/etEmail"
            android:layout_marginTop="54dp"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/EnterPassw"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

</RelativeLayout>
