<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hw.tann.haneen.haneentaskmanager2017.AddTaskActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:id="@+id/textInputLayout3">

        <EditText
            android:id="@+id/etEnterText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterText" />
    </android.support.design.widget.TextInputLayout>

    <ImageButton
        android:id="@+id/ibtnMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/textInputLayout3"
        app:srcCompat="@android:drawable/ic_menu_mapmode" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtInpLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textInputLayout3"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@+id/ibtnMap">

        <EditText
            android:id="@+id/etEnterAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enterAddress" />
    </android.support.design.widget.TextInputLayout>

    <Spinner
        android:id="@+id/spnrMembers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtInpLayout1"
        android:layout_marginTop="28dp" />

    <Button
        android:id="@+id/btnSaveTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spnrMembers"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:text="@string/save" />
</RelativeLayout>
